--- a/legal-data-protection/gdpr-register_of_processes/gdpr_Art30_records_of_processing_process_01.adoc
+++ b/legal-data-protection/gdpr-register_of_processes/gdpr_Art30_records_of_processing_process_01.adoc
@@ -9,12 +9,12 @@
 |Description
 |Collection and processing of personal data via HAPI Product (SaaS)
 |Date of introduction: 
-|13.04.2020
+|03.03.2020
 |Date of last change:
-|25.05.2023
+|03.08.2023
 
 |Responsible department:
-|TODO
+|Development
 |Contact person
 |TODO
 |Phone
