Updating structure, adding TOMs, links etc.

--- a/legal-data-protection/gdpr-register_of_processes_VONQ_BV/gdpr_art30_HR_Personio_process_02.adoc
+++ b/legal-data-protection/gdpr-register_of_processes_VONQ_BV/gdpr_art30_HR_Personio_process_02.adoc
@@ -92,7 +92,7 @@
 |The deletion periods correspond to the legal requirements, in particular the corresponding retention periods of the laws of the Netherlands.
 |===
 
-include::gdpr_Art30_records_of_processing_toms.adoc[]
+include::gdpr_Art30_toms.adoc[]
 
  ………………………………………    …………… 	……………………………… 
  Responsible        Date    Signature
