--- a/legal-data-protection/gdpr-register_of_processes_VONQ_BV/gdpr_art30_engineering_HAPI_process_02.adoc
+++ b/legal-data-protection/gdpr-register_of_processes_VONQ_BV/gdpr_art30_engineering_HAPI_process_02.adoc
@@ -93,7 +93,7 @@ Luxembourg
 |The deletion periods correspond to the legal requirements, in particular the corresponding retention periods of the laws of the Netherlands.
 |===
 
-include::gdpr_Art30_records_of_processing_toms.adoc[]
+include::gdpr_Art30_toms.adoc[]
 
  ………………………………………    …………… 	……………………………… 
  Responsible        Date    Signature
