Adding first TIA template sections, updating knowledge base and tweaks

--- a/legal-data-protection/gdpr-knowledge-base/gdpr_internal_ressources.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/gdpr_internal_ressources.adoc
@@ -4,11 +4,19 @@
 :toclevels: 4
 
 <<<
- 
+
+.Document information
+|===
+| | 
+|Classification:
+|restricted
+|===
+
 == Products ==
+
 === HAPI ===
 
-HAPI Partnerschip Agreement
+HAPI Partnership Agreement
 * link:https://docs.google.com/document/d/1VDtOANjV5H7EC0VaLQkYlhQSWjW9QvXM[]
 
 HAPI DPA check:
@@ -17,3 +25,20 @@ HAPI DPA check:
 Client communication:
 * link:https://docs.google.com/document/d/1W-3UbrfYV2y9ezCpvlCKO8gVeQrMr9lTUwrfZAa2CTI[]
 * link:https://docs.google.com/document/d/1pBERYrakzrIbzM_tcQSY-nD6_8xckDcdY5Nn-YT8fE0[]
+
+=== Job Post ===
+
+ANWB questionnaire folder:
+* link:https://drive.google.com/drive/folders/12zXakslQnm0yDTlEBHayM7jiz-nFX1bc[]
+
+E.ON questionnaire:
+* link:https://docs.google.com/spreadsheets/d/1EN5KEp2W-orTVisQsXTF60v7rhUIcxab[]
+
+EQUANS questionnaire folder:
+* link:https://drive.google.com/drive/folders/1uYEqT2IEPLbZOYZw9Stetzy7o5Kpf2wF[]
+
+Novartis questionnaire:
+* link:https://docs.google.com/spreadsheets/d/1vrstiNI53Z6-LxXRLfbmzEQnt-gq1cuM[]
+
+Publicis Group questionnaire folder:
+* link:https://drive.google.com/drive/folders/1ueLD2JjHpEEzN6ZANFs9QNTssB5Q6ZOo[]
