--- a/legal-data-protection/gdpr-supplier-lists/sub-processor-listing-latest.adoc
+++ b/legal-data-protection/gdpr-supplier-lists/sub-processor-listing-latest.adoc
@@ -1,3 +1,11 @@
+.Document information
+[%autowidth]
+|===
+| | 
+|Classification:
+|restricted
+|===
+
 [%header,format=csv]
 |===
 include::sub-processor-listing-v07.25-16.12.2023.csv[]
