--- a/legal-data-protection/gdpr-knowledge-base/gdpr_external_ressources.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/gdpr_external_ressources.adoc
@@ -5,6 +5,14 @@
 
 <<<
 
+.Document information
+[%autowidth]
+|===
+| | 
+|Classification:
+|restricted
+|===
+
 == Regulatory Authority ==
 
 * VONQ B.V. - link:https://www.autoriteitpersoonsgegevens.nl/en[]
@@ -28,8 +36,14 @@
 [[ART04S08]]
 === Processor Controller - Art. 4 Sec. 8 GDPR === 
 
-* link:https://www.lda.bayern.de/media/FAQ_Abgrenzung_Auftragsverarbeitung.pdf[]
+English resources:
+
+* https://www.edpb.europa.eu/our-work-tools/our-documents/guidelines/guidelines-072020-concepts-controller-and-processor-gdpr_en
 * link:http://ec.europa.eu/justice/article-29/documentation/opinion-recommendation/files/2010/wp169_en.pdf[]
+
+German resources:
+
+* link:https://www.lda.bayern.de/media/FAQ_Abgrenzung_Auftragsverarbeitung.pdf[]
 
 [[ART04S11]]
 === Consent - Art. 4 Sec. 11 GDPR ===
@@ -43,14 +57,21 @@
  
 [[ART22]]
 === Automated Decision Making - Art. 22 GDPR ===
- 
+
+English resources:
+
 * link:http://ec.europa.eu/newsroom/article29/item-detail.cfm?item_id=612053[]
-* link:https://www.heise.de/newsticker/meldung/DSGVO-und-KI-Unvertraeglichkeiten-beim-Datenschutz-4049785.html[]
 * link:https://www.bitkom.org/Bitkom/Publikationen/Bitkom-views-on-Article-29-Working-Party-draft-guidelines-on-automated-individual-decision-making-including-profiling.html[]
+
+German resources:
+
+* link:https://www.heise.de/newsticker/meldung/DSGVO-und-KI-Unvertraeglichkeiten-beim-Datenschutz-4049785.html[]
 
 [[ART30]]
 === Register of Processes - Art. 30 GDPR ===
- 
+
+German resources:
+
 * link:https://www.lda.bayern.de/de/infoblaetter.html[]
 * link:https://www.lda.bayern.de/media/dsk_hinweise_vov.pdf[]
 * link:https://www.lda.bayern.de/media/dsk_muster_vov_verantwortlicher.pdf[]
@@ -59,23 +80,31 @@
 [[ART35]]
 === Data Protection Impact Assessment (DPIA) - Art. 35 GDPR ===
 
+English resources:
+
 * link:https://www.cnil.fr/sites/cnil/files/2024-01/draft_practical_guide_transfer_impact_assessment.pdf
+* link:https://ec.europa.eu/energy/sites/ener/files/documents/2014_dpia_smart_grids_forces.pdf[]
+* link:https://blog.lukaszolejnik.com/guidelines-to-data-protection-impact-assessment/[]
+* link:https://blog.lukaszolejnik.com/analysis-of-working-party-29-dpia-guidelines/[]
+
+German resources:
+
 * link:https://www.bitkom.org/NP-Themen/NP-Vertrauen-Sicherheit/Datenschutz/FirstSpirit-1496129138918170529-LF-Risk-Assessment-online.pdf[]
 * link:https://www.lda.bayern.de/media/dsk_kpnr_5_dsfa.pdf[]
 * link:https://www.datenschutzzentrum.de/uploads/datenschutzfolgenabschaetzung/20171106-Planspiel-Datenschutz-Folgenabschaetzung.pdf[]
 * link:https://www.privacyofficers.at/Privacyofficers_DSFA-Umsetzung_DSGVO_v1.0.pdf[]
-* link:https://ec.europa.eu/energy/sites/ener/files/documents/2014_dpia_smart_grids_forces.pdf[]
-
 * link:https://www.baden-wuerttemberg.datenschutz.de/wp-content/uploads/2018/05/Liste-von-Verarbeitungsvorg%C3%A4ngen-nach-Art.-35-Abs.-4-DS-GVO-LfDI-BW.pdf[]
 * link:https://www.datenschutz-berlin.de/pdf/datenschutzfolgeabschaetzung/dsfolge-nicht-oeffentlich.pdf[]
 * link:https://www.lda.brandenburg.de/media_fast/4055/DSFA_Muss-Liste_allgemein_180525.pdf[]
 * link:https://datenschutz-hamburg.de/assets/pdf/DSFA%20Muss-Liste%20f%C3%BCr%20den%20nicht-%C3%B6ffentlicher%20Bereich-HmbBfDI%20Version%201.0%20(Entwurf).pdf[]
 * link:https://datenschutz.saarland.de/fileadmin/datenschutz/ds-gvo/ds-folgenabschaetzung/Muss-Liste_SL.pdf[]
 * link:https://www.datenschutzzentrum.de/uploads/datenschutzfolgenabschaetzung/20180525_LfD-SH_DSFA_Muss-Liste_V1.0.pdf[]
- 
+
 == Examples ==
 === Internal Register of processing operations ===
  
+German resources:
+
 * link:https://www.impulse.de/recht-steuern/rechtsratgeber/dsgvo-checkliste/7297857.html[]
 * link:https://www.datenschutz.hessen.de/neuesdatenschutzrecht.htm[]
 * link:https://www.bvdnet.de/wp-content/uploads/2017/06/Muster_Verz_der_Verarbeitungst%C3%A4tigkeiten_TOMs.pdf[]
@@ -84,11 +113,6 @@
  
 * link:https://www.bitkom.org/Bitkom/Publikationen/Template-Agreement-Annex-Processing-of-personal-data-on-behalf-of-a-controller-in-accordance-with-Article-28-3-of-the-EU-General-Data-Protection-Regulation-GDPR.html[]
  
-=== Data Protection Impact Assessment ===
- 
-* link:https://blog.lukaszolejnik.com/guidelines-to-data-protection-impact-assessment/[]
-* link:https://blog.lukaszolejnik.com/analysis-of-working-party-29-dpia-guidelines/[]
-
 == Technical Guides ==
  
 * link:https://techblog.bozho.net/gdpr-practical-guide-developers/[]
