Updating knowledge base, sub-processors etc

--- a/legal-data-protection/gdpr-knowledge-base/art26/joint_controller_agreement-example_social-talent.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/art26/joint_controller_agreement-example_social-talent.adoc
@@ -1,4 +1,16 @@
+= Data Protection - GDPR - Internal Resources
 
+:toc:
+:toclevels: 4
+
+<<<
+
+.Document information
+|===
+| | 
+|Classification:
+|restricted
+|===
 
 
 Exhibit A - Detailed description of the project or purpose
