--- a/legal-data-protection/gdpr-knowledge-base/art26/joint_controllership_checklist.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/art26/joint_controllership_checklist.adoc
@@ -1,3 +1,17 @@
+= Data Protection - GDPR - Internal Resources
+
+:toc:
+:toclevels: 4
+
+<<<
+
+.Document information
+|===
+| | 
+|Classification:
+|restricted
+|===
+
 * Date of last change: 08.08.2023
 
 = Sample checklist for joint controllership
