--- a/legal-data-protection/gdpr-knowledge-base/gdpr_internal_ressources.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/gdpr_internal_ressources.adoc
@@ -42,3 +42,19 @@ Novartis questionnaire:
 
 Publicis Group questionnaire folder:
 * link:https://drive.google.com/drive/folders/1ueLD2JjHpEEzN6ZANFs9QNTssB5Q6ZOo[]
+
+=== CPA+ ===
+
+CPA+ presentation:
+* link:https://docs.google.com/presentation/d/1L88aG1DylocysP4765EBtVhHPXw6u5aOoiCzU9mmQZU[]
+
+CPA+ agreement with publishers (WIP)
+* link:https://docs.google.com/document/d/1UEopO_zrJCHkmt_APwHzzgxFIPKaloRsuTYuOaG9DSQ[]
+
+== Parties ==
+
+=== Job Boards ===
+
+Current Job Board agreement:
+*link:https://www.vonq.com/vonq-parnership-tcs-docx[]
+
