--- a/legal-data-protection/gdpr-knowledge-base/internal_ressources-gdpr.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/internal_ressources-gdpr.adoc
@@ -12,21 +12,48 @@
 |restricted
 |===
 
+== General ==
+
+=== List of VONQ suppliers ===
+
+* link:https://docs.google.com/spreadsheets/d/14TyBwW9gproRjvvgy73bjU3nNk4dy8CP[]
+
+=== List of Software used by VONQ ===
+
+* link:https://qandidate.atlassian.net/wiki/spaces/VONQ/pages/26640388/Software+Parade[]
+
 == Products ==
+
+=== CPA+ ===
+
+==== List of Media Partners (Publishers) for CPA+ ====
+* link:https://docs.google.com/spreadsheets/d/1e_AfQcf2Cdo4u2LCuKb6E2rbH5eESZvj-K_YmQMKUcc[]
+
+==== CPA+ presentation ====
+* link:https://docs.google.com/presentation/d/1L88aG1DylocysP4765EBtVhHPXw6u5aOoiCzU9mmQZU[]
+
+==== CPA+ agreement with publishers (WIP) ====
+* link:https://docs.google.com/document/d/1UEopO_zrJCHkmt_APwHzzgxFIPKaloRsuTYuOaG9DSQ[]
 
 === HAPI ===
 
-HAPI Partnership Agreement
+==== HAPI partnership agreement ====
 * link:https://docs.google.com/document/d/1VDtOANjV5H7EC0VaLQkYlhQSWjW9QvXM[]
 
-HAPI DPA check:
+==== HAPI DPA check ====
 * link:https://docs.google.com/spreadsheets/d/1qsKBpg0_QyxD02VAfk0R_rj7HHFsNTHWdxrXt54RK3o[]
 
-Client communication:
+==== Client communication ====
 * link:https://docs.google.com/document/d/1W-3UbrfYV2y9ezCpvlCKO8gVeQrMr9lTUwrfZAa2CTI[]
 * link:https://docs.google.com/document/d/1pBERYrakzrIbzM_tcQSY-nD6_8xckDcdY5Nn-YT8fE0[]
 
 === Job Post ===
+
+==== Job Post ATS integrations ====
+
+* link:https://docs.google.com/spreadsheets/d/1CVbCKy8vIC5vAcfcEYsHDKZUOoj7Lyj7_RnvxWQVpaw[]
+
+==== Job Post questionnaires ====
 
 ANWB questionnaire folder:
 * link:https://drive.google.com/drive/folders/12zXakslQnm0yDTlEBHayM7jiz-nFX1bc[]
@@ -43,18 +70,10 @@ Novartis questionnaire:
 Publicis Group questionnaire folder:
 * link:https://drive.google.com/drive/folders/1ueLD2JjHpEEzN6ZANFs9QNTssB5Q6ZOo[]
 
-=== CPA+ ===
-
-CPA+ presentation:
-* link:https://docs.google.com/presentation/d/1L88aG1DylocysP4765EBtVhHPXw6u5aOoiCzU9mmQZU[]
-
-CPA+ agreement with publishers (WIP)
-* link:https://docs.google.com/document/d/1UEopO_zrJCHkmt_APwHzzgxFIPKaloRsuTYuOaG9DSQ[]
-
 == Parties ==
 
 === Job Boards ===
 
-Current Job Board agreement:
-*link:https://www.vonq.com/vonq-parnership-tcs-docx[]
+==== Current Job Board agreement ====
+* link:https://www.vonq.com/vonq-parnership-tcs-docx[]
 
