Fixing typos and mistakes in upcoming privacy policy; amending KoPilot; other fixes etc.

--- a/legal-website/versioning-privacy-policy/privacy-policy-latest.adoc
+++ b/legal-website/versioning-privacy-policy/privacy-policy-latest.adoc
@@ -15,5 +15,13 @@
 
 [%header,format=adoc]
 |===
+Current Privacy Policy:
+
 include::privacy-policy-20220730.adoc[]
+|===
+
+|===
+Upcoming Privacy Policy:
+
+include::privacy-policy-20250430.adoc[]
 |===
