Adding retention periods for Job Post

--- a/legal-data-protection/gdpr-knowledge-base/internal_ressources-gdpr.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/internal_ressources-gdpr.adoc
@@ -61,6 +61,9 @@ ANWB questionnaire folder:
 E.ON questionnaire:
 * link:https://docs.google.com/spreadsheets/d/1EN5KEp2W-orTVisQsXTF60v7rhUIcxab[]
 
+WTW questionnaire:
+* link:https://docs.google.com/spreadsheets/d/1_JzhQXgX1hnx5H4s_5CJ3SPhXslefHVj[]
+
 EQUANS questionnaire folder:
 * link:https://drive.google.com/drive/folders/1uYEqT2IEPLbZOYZw9Stetzy7o5Kpf2wF[]
 
