--- a/legal-data-protection/gdpr-knowledge-base/gdpr-art05/retention_periods.adoc
+++ b/legal-data-protection/gdpr-knowledge-base/gdpr-art05/retention_periods.adoc
@@ -1,4 +1,4 @@
-= Data Protection - Retention Periods - Internal Resources
+= Data Protection - GDPR - Retention Periods
 
 :toc:
 :toclevels: 4
@@ -11,11 +11,13 @@
 | | 
 |Classification:
 |restricted
+|Author:
+|DPO
 |===
 
-== Retention Periods ==
+== Retention Periods in General ==
  
-Orientation for retetion periods is the respective regulation for the statue of limitation.
+Orientation for retetion periods is the respective regulation for the statue of limitation. There are basic data retention periods defined in VONQ's Data Management Policy: https://docs.google.com/document/d/1FCY1sSlBngdHullFN6PwC-3NH5--b4Nu[]
 
 === VONQ Job Post ===
 
@@ -29,7 +31,7 @@ payload logs from transactions to job boards: 30 days
 
 Apart from that retention periods are defined by the statue of limitation in the Netherlands.
 
-Example how to mention: link: https://docs.google.com/spreadsheets/d/1EN5KEp2W-orTVisQsXTF60v7rhUIcxab/edit?gid=201001863#gid=201001863
+Example how to mention: link: https://docs.google.com/spreadsheets/d/1EN5KEp2W-orTVisQsXTF60v7rhUIcxab/edit?gid=201001863#gid=201001863[]
 
 === VONQ HAPI ===
 
